--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "antd": "^4.15.5",
         "axios": "^0.21.1",
         "mongodb": "^3.6.6",
-        "next": "10.2.0",
+        "next": "^10.2.3",
         "react": "17.0.2",
         "react-dom": "17.0.2"
     },
