--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-    "name": "shrt",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "antd": "^4.15.5",
-        "axios": "^0.21.1",
-        "mongodb": "^3.6.6",
-        "next": "^10.2.3",
-        "react": "17.0.2",
-        "react-dom": "17.0.2"
-    },
-    "devDependencies": {
-        "@types/mongodb": "^3.6.12",
-        "@types/node": "^15.3.0",
-        "@types/react": "^17.0.5",
-        "@vercel/node": "^1.10.0",
-        "typescript": "^4.2.4"
-    }
+  "name": "onix",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "antd": "^4.23.0",
+    "axios": "^0.27.2",
+    "mongodb": "^4.9.1",
+    "next": "^12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^4.0.6",
+    "@types/node": "^18.7.15",
+    "@types/react": "^18.0.18",
+    "@vercel/node": "^2.5.13",
+    "typescript": "^4.8.2"
+  }
 }
