--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
     "@vercel/node": "^2.5.13",
+    "prisma": "^4.3.1",
     "typescript": "^4.8.2"
   }
 }
