--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "antd": "^4.23.0",
     "axios": "^0.27.2",
     "mongodb": "^4.9.1",
     "next": "^12.2.5",
@@ -20,7 +19,10 @@
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
     "@vercel/node": "^2.5.13",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
     "prisma": "^4.3.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2"
   }
 }
