Installed Prisma Client and added shortlink schema

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "mongodb": "^4.9.1",
     "next": "^12.2.5",
