--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "copy-to-clipboard": "^3.3.2",
+    "debounce": "^1.2.1",
     "next": "^12.2.5",
+    "random-word-slugs": "^0.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.18",
     "@vercel/node": "^2.5.13",
